@@ -1,6 +1,3 @@
-import org.gradle.api.tasks.testing.logging.TestExceptionFormat
-import org.gradle.api.tasks.testing.logging.TestLogEvent
-import org.jetbrains.exposed.gradle.setupDialectTest
 import tanvd.kosogor.proxy.publishJar
 
 plugins {
@@ -33,16 +30,3 @@ publishJar {
         }
     }
 }
-
-tasks.withType(Test::class.java) {
-    jvmArgs = listOf("-XX:MaxPermSize=256m")
-    testLogging {
-        events.addAll(listOf(TestLogEvent.PASSED, TestLogEvent.FAILED, TestLogEvent.SKIPPED))
-        showStandardStreams = true
-        exceptionFormat = TestExceptionFormat.FULL
-    }
-}
-
-val dialect: String by project
-
-setupDialectTest(dialect)
